   (instead of terminating borgmatic outright).
 * Drop support for Python 3.5, which has been end-of-lifed.
 * Update versions of test dependencies (test_requirements.txt and test containers).
 * Only support black code formatter on Python 3.8+. New black dependencies make installation
   difficult on older versions of Python.

1.5.12
 * Fix for previous release with incorrect version suffix in setup.py. No other changes.

1.5.11
 * #341: Add "temporary_directory" option for changing Borg's temporary directory.
 * #352: Lock down systemd security settings in sample systemd service file.
 * #355: Fix traceback when a database hook value is null in a configuration file.
 * #361: Merge override values when specifying the "--override" flag multiple times. The previous
   behavior was to take the value of the last "--override" flag only.
 * #367: Fix traceback when upgrading old INI-style configuration with upgrade-borgmatic-config.
 * #368: Fix signal forwarding from borgmatic to Borg resulting in recursion traceback.
 * #369: Document support for Borg placeholders in repository names.

1.5.10
 * #347: Add hooks that run for the "extract" action: "before_extract" and "after_extract".
 * #350: Fix traceback when a configuration directory is non-readable due to directory permissions.
 * Add documentation navigation links on left side of all documentation pages.
 * Clarify documentation on configuration overrides, specifically the portion about list syntax:
   http://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#configuration-overrides
 * Clarify documentation overview of monitoring options:
   http://torsion.org/borgmatic/docs/how-to/monitor-your-backups/

1.5.9
 * #300: Add "borgmatic export-tar" action to export an archive to a tar-formatted file or stream.
 * #339: Fix for intermittent timing-related test failure of logging function.
 * Clarify database documentation about excluding named pipes and character/block devices to prevent
   hangs.