@@ -28,5 +28,5 @@ headerClass: elv-header-default
 
     {{ content | safe }}
 
-    {% include 'components/suggestion-form.html' %}
+    {% include 'components/suggestion-link.html' %}
 </main>
